resources/seldon-model/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    project_name: model-test
    deployment_version: v1
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: $ACM_ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-port: '8000'
    alb.ingress.kubernetes.io/healthcheck-path: /ready
    alb.ingress.kubernetes.io/success-codes: '200'
  labels:
    app: seldon
  name: model-test

spec:
  ingressClassName: mlops-ingress-class
  rules:
  - host: "model.cjhyun.people.aws.dev"
    http:
      paths:
      - backend:
          service:
            name: model-test
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
